--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "scripts": {
     "start": "node index.js",
-    "dev": "node --watch --env-file=.env --no-warnings index.js"
+    "dev": "node --watch --env-file=.env --no-warnings src/index.js"
   },
   "keywords": [],
   "author": "",
