--- a/.env
+++ b/.env
@@ -1,3 +1,6 @@
 PORT=3327
-NODE_ENV="development"
-CLIENT_URL="http://localhost:1420"
+NODE_ENV=production 
+# "development"
+CLIENT_URL=https://localhost:5173
+ACCESS_TOKEN_EXPIRES_IN=1
+REFRESH__TOKEN_EXPIRES_IN=7
